--- a/views/index.haml
+++ b/views/index.haml
@@ -9,6 +9,9 @@
         Results for
         %span#search_term
       #result_text
+      #defn
+        %h2.title
+        %iframe
     #intro
       %h1 Crossword Solver
 
