--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -1,39 +1,32 @@
-body { background: #ffffff; font-family: Arial, Helvetica, sans-serif}
+body { background: #ffffff; font-family: Optima,Segoe,"Segoe UI",Candara,Calibri,Arial,sans-serif; }
 P.warning { font: italic small Verdana, Arial, Helvetica, sans-serif; color: #3366FF}
-h1 { font: 24pt sans-serif }
-h2 { font: 16pt sans-serif; font-weight: bold; color: red }
-#result_text {  font-family: "Courier New", Courier, mono}
+h1 { font: 24pt Arial, Helvetica, sans-serif }
+h2 { font: 16pt Arial, Helvetica, sans-serif; font-weight: bold; color: red }
+#result_text .entry { overflow: hidden; white-space: nowrap; }
+#result_text .entry code { font-family: "Courier New", Courier, mono}
+#result_text .entry a { font: 10px Arial, Helvetica, sans-serif; margin-left: 6px; }
+#result_text .entry dfn { margin-left: 18px; font: 12px Arial, Helvetica, sans-serif;  }
 .preview { color: #f00; font-size: 12px; font-weight: bold; display: none; }
 .hidden { display: none; }
 #result_text a {
   text-decoration: none;
 }
-#defn {
-  display: none;
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 400px;
-  height: 500px;
-  border: 2px solid #aaa;
-  background: #fff;
-}
-#defn .title {
-  margin-top: 0;
-  position: absolute;
-  top: 0;
-}
-#defn iframe {
-  position: absolute;
-  top: 30px;
-  width: 100%;
-  height: 470px;
-  border: none;
-  background: #fff;
+
+#result_text .entry {
+  position: relative
 }
 
-@media screen and (max-width: 640px) {
-  #defn {
-    width: 300px;
-  }
+#result_text .entry .fade {
+  position:absolute;
+  top:0px;
+  right:0;
+  width:100px;
+  height:50px;
+  background: -moz-linear-gradient(left,  rgba(255,255,255,0) 0%, rgba(255,255,255,0) 52%, rgba(255,255,255,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(52%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 52%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 52%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 52%,rgba(255,255,255,1) 100%); /* IE10+ */
+  background: linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 52%,rgba(255,255,255,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=1 ); /* IE6-9 */
 }
