--- a/views/index.haml
+++ b/views/index.haml
@@ -49,5 +49,7 @@
     %address
       <a href="http://www.petebevin.com/">Pete Bevin</a>, <a href="mailto:pete@petebevin.com">pete@petebevin.com</a>.
 
+    #def.hidden
+      %iframe
     %script{src: "http://code.jquery.com/jquery-1.10.1.min.js", type: "text/javascript"}
     %script{src: javascript_path("app.js"), type: "text/javascript"}
