--- a/views/index.haml
+++ b/views/index.haml
@@ -34,6 +34,7 @@
       You can match word boundaries with forward slashes, like this: <code>h.r./...l../e.g</code>
     %form#fwform
       %input#fw{type: "text", name: "fw", autocorrect: "off", autocapitalize: "off", tabindex: 2}
+      %input#fwc{type: "text", name: "fwc", autocorrect: "off", autocapitalize: "off", tabindex: 2, placeholder: "Context (optional)"}
       %input{type: "Submit", value: "Find Word/Phrase"}
       #fw_preview.preview
 
