Better zoom level on iphone

--- a/views/index.haml
+++ b/views/index.haml
@@ -2,6 +2,7 @@
   %head
     %title Crossword Solver
     %link{rel: "stylesheet", type: "text/css", media: "all", href: stylesheet_path("app") }
+    %meta{name: "viewport", content: "width=device-width, user-scalable=no"}
 
   %body
     #results.hidden
