Apply CSS reset

--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -1,7 +1,86 @@
-body { background: #ffffff; font-family: Optima,Segoe,"Segoe UI",Candara,Calibri,Arial,sans-serif; }
-P.warning { font: italic small Verdana, Arial, Helvetica, sans-serif; color: #3366FF}
-h1 { font: 30px Arial, Helvetica, sans-serif }
-h2 { font: 18px Arial, Helvetica, sans-serif; font-weight: bold; color: red }
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1.2em;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+
+body {
+  background: #ffffff;
+  font-family: Optima,Segoe,"Segoe UI",Candara,Calibri,Arial,sans-serif;
+  margin: 8px;
+}
+p {
+  margin: 1em 0;
+}
+p.warning {
+  font: italic small Verdana, Arial, Helvetica, sans-serif;
+  color: #3366FF
+}
+blockquote {
+  margin: 1em 40px;
+}
+h1 {
+  margin: 0 0 0.67em;
+  font: 30px Arial, Helvetica, sans-serif
+}
+h2 {
+  margin: 0.83em 0;
+  font: 18px Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: red;
+}
+form {
+  margin-bottom: 1em;
+}
+code {
+  /* font-family: Monaco, "Lucida Console", monospace; */
+  font-family: monospace;
+}
 #result_text .entry { overflow: hidden; white-space: nowrap; }
 #result_text .entry.good { background: #ffc; }
 #result_text .entry a { font: 14px "Courier New", Courier, mono; }
