--- a/views/index.haml
+++ b/views/index.haml
@@ -8,7 +8,7 @@
     #results.hidden
       %h1
         Results for
-        %span#search_term
+        %em#search_term
       #result_text
     #intro
       %h1 Crossword Solver
