Link to /cryptogram

--- a/views/index.haml
+++ b/views/index.haml
@@ -47,6 +47,11 @@
       #thesaurus_preview.preview
 
     %hr
+    %h2 Solve a Cryptogram
+    %p
+      %a{href: "/cryptogram"} Cryptograms are now on their own page.
+
+    %hr
     %address
       <a href="http://www.petebevin.com/">Pete Bevin</a>, <a href="mailto:pete@petebevin.com">pete@petebevin.com</a>.
 
