--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -69,7 +69,7 @@ h1 {
   font: 30px Arial, Helvetica, sans-serif
 }
 h1 em {
-  color: #00f;
+  color: blue;
 }
 h2 {
   margin: 0.83em 0;
@@ -93,7 +93,8 @@ code {
 #result_text .entry { overflow: hidden; white-space: nowrap; }
 #result_text .entry.good { background: #ffc; }
 #result_text .entry a { font: normal 14px "Lucida Console", Monaco, monospace; }
-.preview { color: #f00; font-size: 12px; font-weight: bold; display: none; }
+.preview { color: red; font-size: 12px; font-weight: bold; display: none; }
+#thesaurus_preview { color: black; }
 .hidden { display: none; }
 #result_text a { text-decoration: none; }
 
