Upgrade jquery to https

--- a/views/index.haml
+++ b/views/index.haml
@@ -57,5 +57,5 @@
 
     #def.hidden
       %iframe
-    %script{src: "http://code.jquery.com/jquery-1.10.1.min.js", type: "text/javascript"}
+    %script{src: "https://code.jquery.com/jquery-1.10.1.min.js", type: "text/javascript"}
     %script{src: javascript_path("app.js"), type: "text/javascript"}
