Add note about downtime

--- a/views/index.haml
+++ b/views/index.haml
@@ -13,11 +13,13 @@
     #intro
       %h1 Crossword Solver
 
+
       %p I enjoy crosswords, and wrote these tools to help me.  There are well over a quarter of a million words and phrases in the dictionary, thanks to <a href="http://www.crosswordman.com/">Ross Beresford</a>'s UKACD dictionary and a huge list of phrases from Ross Withey.
 
-      %blockquote
-        %p.warning
-          NB. If you're trying to find anagrams for someone's name, you're in the wrong place: see <a href="http://www.anagramgenius.com/">http://www.anagramgenius.com/</a>
+      %p.oops [November 2017] Sorry for the recent downtime; I made a silly mistake! If you're reading this, all should be well again!
+      -# %blockquote
+      -#   %p.warning
+      -#     NB. If you're trying to find anagrams for someone's name, you're in the wrong place: see <a href="http://www.anagramgenius.com/">http://www.anagramgenius.com/</a>
 
     %hr
     %h2 Find an Anagram
