--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -59,7 +59,12 @@ p {
 }
 p.warning {
   font: italic small Verdana, Arial, Helvetica, sans-serif;
-  color: #3366FF
+  color: #3366FF;
+}
+.oops {
+  font: italic small Verdana, Arial, Helvetica, sans-serif;
+  color: #FF6633;
+  margin-left: 40px;
 }
 blockquote {
   margin: 1em 40px;
