Remove note about downtime
This reverts commit 14c6f9e27ad92e10cc50995b0797a2b2485287e4.

--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -59,12 +59,7 @@ p {
 }
 p.warning {
   font: italic small Verdana, Arial, Helvetica, sans-serif;
-  color: #3366FF;
-}
-.oops {
-  font: italic small Verdana, Arial, Helvetica, sans-serif;
-  color: #FF6633;
-  margin-left: 40px;
+  color: #3366FF
 }
 blockquote {
   margin: 1em 40px;
