Make this version available while I work on next.

--- a/views/index.haml
+++ b/views/index.haml
@@ -12,12 +12,9 @@
       #result_text
     #intro
       %h1 Crossword Solver
-
-      %p I enjoy crosswords, and wrote these tools to help me.  There are well over a quarter of a million words and phrases in the dictionary, thanks to <a href="http://www.crosswordman.com/">Ross Beresford</a>'s UKACD dictionary and a huge list of phrases from Ross Withey.
-
-      %blockquote
-        %p.warning
-          NB. If you're trying to find anagrams for someone's name, you're in the wrong place: see <a href="http://www.anagramgenius.com/">http://www.anagramgenius.com/</a>
+      %p
+        This is an old version of wordfun. The current version is at
+        %a{href: "https://www.wordfun.ca/"} www.wordfun.ca
 
     %hr
     %h2 Find an Anagram
